Fixed the contact area appearing off screen on mobile

--- a/portfolio_site/public/css/layout.css
+++ b/portfolio_site/public/css/layout.css
@@ -377,21 +377,51 @@ ul#nav li.current a { color: #fe6928; }
    text-align: center;
    margin-bottom: 48px;
    color: #95A3A3;
+   font-size: 100%;
 }
 
 /* Portfolio Content */
-#portfolio-wrapper .columns { margin-bottom: 36px; }
+#portfolio-wrapper .columns { 
+   margin-bottom: 36px; 
+}
+
+#itemWrap{
+   width: fit-content;
+  height: fit-content;
+}
+
+#portfolioText h5 {
+   text-transform: uppercase;
+   text-align: center;
+   margin-bottom: 5px;
+   color: #95A3A3;
+   font-size: auto;
+   color: white;
+   font: 'Raleway-regular', "Raleway";
+}
+
+#portfolioText p {
+   text-align: left;
+   color: #95A3A3;
+   font-size: auto;
+}
+
 .portfolio-item .item-wrap {
    background: #fff;
-   overflow: hidden;
+   overflow: visible;
    position: relative;
-
    -webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
+
+.portfolio-item img {
+  width: 100%;
+  height: auto;
+}
+
 .portfolio-item .item-wrap a {
    display: block;
    cursor: pointer;
@@ -419,8 +449,8 @@ ul#nav li.current a { color: #fe6928; }
 .portfolio-item .item-wrap .link-icon {
    display: block;
    color: #fff;
-   height: 30px;
-   width: 30px;
+   height: 50px;
+   width: 50px;
    font-size: 18px;
    line-height: 30px;
    text-align: center;
@@ -802,7 +832,6 @@ call-to-action .button {
    font-size: 15px;
    line-height: 24px;
    left: 50%;
-   margin-left: -30px;
    width: 50%;
 }
 #contact input:focus,
@@ -814,16 +843,16 @@ call-to-action .button {
 }
 #contact button.submit {
 	text-transform: uppercase;
-	letter-spacing: 3px;
    color:#fff;
-
    font-family: "Raleway";
    background: #0D0D0D;
 	border: none;
    cursor: pointer;
    height: auto;
-   display: inline-block;
+   display: flex;
    border-radius: 0px;
+   justify-content:'center';
+   align-items:'center';
 }
 #contact button.submit:hover {
 	color: #0D0D0D;
